--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="es" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
   <title>Menú Principal</title>
@@ -142,16 +143,18 @@
   </style>
 </head>
 <body>
-
 <button class="toggle-btn" onclick="toggleMode()">Modo Oscuro / Claro</button>
 
 <nav class="menu-bar">
   <ul>
-    <li><a href="/mesa">Mesa</a></li>
-    <li><a href="/mesero">Mesero</a></li>
-    <li><a href="/pedidos">Pedidos</a></li>
-    <li><a href="/factura">Facturas</a></li>
-    <li><a href="/platillos">Platillos</a></li>
+
+    <li><a href="/mesa" sec:authorize="hasAnyAuthority('ROLE_ADMIN', 'ROLE_MESERO')">Mesa</a></li>
+    <li><a href="/pedidos" sec:authorize="hasAnyAuthority('ROLE_ADMIN', 'ROLE_MESERO')">Pedidos</a></li>
+    <li><a href="/factura" sec:authorize="hasAnyAuthority('ROLE_ADMIN', 'ROLE_MESERO')">Facturas</a></li>
+
+
+    <li><a href="/mesero" sec:authorize="hasAuthority('ROLE_ADMIN')">Mesero</a></li>
+    <li><a href="/platillos" sec:authorize="hasAuthority('ROLE_ADMIN')">Platillos</a></li>
   </ul>
 </nav>
 
@@ -159,10 +162,12 @@
   <h1>Bienvenido a RsKitchen</h1>
   <p>Selecciona una opción del menú para comenzar</p>
 </div>
+
 <form th:action="@{/logout}" method="post">
   <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
   <button type="submit">Cerrar Sesión</button>
 </form>
+
 
 <script>
   function toggleMode() {
