--- a/src/main/resources/templates/factura.html
+++ b/src/main/resources/templates/factura.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8" />
   <title>Facturas</title>
   <style>
-
+    /* Barra fija superior */
     nav {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 50px;
-      background-color: #006edc;
-       display: flex;
+      background-color: #0059b3;
+      display: flex;
       align-items: center;
-      justify-content: center;
       padding: 0 20px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.15);
       z-index: 1000;
@@ -37,8 +36,8 @@
     body {
       padding-top: 60px; /* espacio para la barra fija */
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(120deg, #78bcff, #ffffff);
-      color: #006edc;
+      background-color: #f0f4f8;
+      color: #002244;
       margin: 0;
       padding-left: 20px;
       padding-right: 20px;
@@ -141,14 +140,10 @@
 <nav>
   <a th:href="@{/home}">Rskitchen</a>
   <a th:href="@{/mesa}">Mesa</a>
-  <li><a href="/mesero" sec:authorize="hasAuthority('ROLE_ADMIN')">Mesero</a></li>
-  <li><a href="/platillos" sec:authorize="hasAuthority('ROLE_ADMIN')">Platillos</a></li>
+  <a th:href="@{/mesero}">Mesero</a>
   <a th:href="@{/pedidos}">Pedido</a>
+  <a th:href="@{/platillos}">Platillos</a>
   <a th:href="@{/factura}">Factura</a>
-  <form th:action="@{/logout}" method="post" style="display:inline;">
-    <button type="submit" class="btn-logout">Cerrar Sesión</button>
-  </form>
-
 </nav>
 
 <h1>Listado de Facturas</h1>
