--- a/src/main/resources/templates/mesero.html
+++ b/src/main/resources/templates/mesero.html
@@ -2,7 +2,7 @@
 <html lang="es" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Registrar Mesero</title>
     <style>
         body {
@@ -23,6 +23,7 @@
           height: 50px;
           background-color: #004080; /* azul oscuro */
           display: flex;
+          justify-content: center;
           align-items: center;
           padding: 0 20px;
           box-shadow: 0 2px 5px rgba(0,0,0,0.2);
@@ -85,6 +86,8 @@
           border: 1px solid #a3c2ff;
           border-radius: 5px;
           box-sizing: border-box;
+          color: #002244;
+          font-weight: 600;
         }
 
         button {
@@ -132,7 +135,6 @@
           background-color: #d6eaff;
         }
     </style>
-
 </head>
 <body>
 <nav>
