--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<html lang="es" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="es" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
   <title>Menú Principal</title>
@@ -44,7 +43,8 @@
       margin: 0 20px;
     }
 
-    .menu-bar ul li a {
+    .menu-bar ul li a,
+    .menu-bar ul li .menu-link-btn {
       text-decoration: none;
       font-weight: bold;
       padding: 12px 24px;
@@ -54,9 +54,12 @@
       color: white;
       display: inline-block;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      cursor: pointer;
+      border: none;
     }
 
-    .menu-bar ul li a:hover {
+    .menu-bar ul li a:hover,
+    .menu-bar ul li .menu-link-btn:hover {
       background-color: #87CEEB;
       color: black;
     }
@@ -143,19 +146,20 @@
   </style>
 </head>
 <body>
-<button class="toggle-btn" onclick="toggleMode()">Modo Oscuro / Claro</button>
 
 <nav class="menu-bar">
   <ul>
-
-    <li><a href="/mesa" sec:authorize="hasAnyAuthority('ROLE_ADMIN', 'ROLE_MESERO')">Mesa</a></li>
-    <li><a href="/pedidos" sec:authorize="hasAnyAuthority('ROLE_ADMIN', 'ROLE_MESERO')">Pedidos</a></li>
-    <li><a href="/factura" sec:authorize="hasAnyAuthority('ROLE_ADMIN', 'ROLE_MESERO')">Facturas</a></li>
-
-
-    <li><a href="/mesero" sec:authorize="hasAuthority('ROLE_ADMIN')">Mesero</a></li>
-    <li><a href="/platillos" sec:authorize="hasAuthority('ROLE_ADMIN')">Platillos</a></li>
-
+    <li><a href="/mesa">Mesa</a></li>
+    <li><a href="/mesero">Mesero</a></li>
+    <li><a href="/pedidos">Pedidos</a></li>
+    <li><a href="/factura">Facturas</a></li>
+    <li><a href="/platillos">Platillos</a></li>
+    <li>
+      <form th:action="@{/logout}" method="post" style="display:inline;">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        <button type="submit" class="menu-link-btn">Cerrar Sesión</button>
+      </form>
+    </li>
   </ul>
 </nav>
 
@@ -163,12 +167,6 @@
   <h1>Bienvenido a RsKitchen</h1>
   <p>Selecciona una opción del menú para comenzar</p>
 </div>
-
-<form th:action="@{/logout}" method="post">
-  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-  <button type="submit">Cerrar Sesión</button>
-</form>
-
 
 <script>
   function toggleMode() {
