--- a/src/main/resources/templates/factura.html
+++ b/src/main/resources/templates/factura.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8" />
   <title>Facturas</title>
@@ -140,9 +140,9 @@
 <nav>
   <a th:href="@{/home}">Rskitchen</a>
   <a th:href="@{/mesa}">Mesa</a>
-  <a th:href="@{/mesero}">Mesero</a>
+  <li><a href="/mesero" sec:authorize="hasAuthority('ROLE_ADMIN')">Mesero</a></li>
+  <li><a href="/platillos" sec:authorize="hasAuthority('ROLE_ADMIN')">Platillos</a></li>
   <a th:href="@{/pedidos}">Pedido</a>
-  <a th:href="@{/platillos}">Platillos</a>
   <a th:href="@{/factura}">Factura</a>
 </nav>
 
