--- a/src/main/resources/templates/factura.html
+++ b/src/main/resources/templates/factura.html
@@ -11,9 +11,10 @@
       left: 0;
       width: 100%;
       height: 50px;
-      background-color: #0059b3;
-      display: flex;
+      background-color: #006edc;
+       display: flex;
       align-items: center;
+      justify-content: center;
       padding: 0 20px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.15);
       z-index: 1000;
@@ -37,7 +38,7 @@
       padding-top: 60px; /* espacio para la barra fija */
       font-family: 'Poppins', sans-serif;
       background-color: #f0f4f8;
-      color: #002244;
+      color: #006edc;
       margin: 0;
       padding-left: 20px;
       padding-right: 20px;
@@ -144,6 +145,7 @@
   <li><a href="/platillos" sec:authorize="hasAuthority('ROLE_ADMIN')">Platillos</a></li>
   <a th:href="@{/pedidos}">Pedido</a>
   <a th:href="@{/factura}">Factura</a>
+  <button type="submit">Cerrar Sesión</button>
 </nav>
 
 <h1>Listado de Facturas</h1>
