--- a/src/main/resources/templates/pedido.html
+++ b/src/main/resources/templates/pedido.html
@@ -12,9 +12,10 @@
       left: 0;
       width: 100%;
       height: 60px;
-      background-color: #0059b3;
+      background-color: #006edc;
+      display: flex;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center;
       padding: 0 30px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.15);
       z-index: 1000;
@@ -162,6 +163,7 @@
   <li><a href="/platillos" sec:authorize="hasAuthority('ROLE_ADMIN')">Platillos</a></li>
   <a th:href="@{/pedidos}">Pedido</a>
   <a th:href="@{/factura}">Factura</a>
+  <button type="submit">Cerrar Sesión</button>
 </nav>
 
 <div style="max-width: 1200px; margin: 0 auto; padding: 20px;">
