--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(120deg, #87CEEB, #ffffff);
+      background: linear-gradient(120deg, #78bcff, #ffffff);
       overflow-x: hidden;
       transition: background 0.5s ease;
     }
@@ -18,7 +18,7 @@
     }
 
     .menu-bar {
-      background-color: white;
+      background-color: ffffff;
       padding: 20px 0;
       box-shadow: 0 2px 12px rgba(0, 0, 0, 0.2);
       text-align: center;
