--- a/src/main/resources/templates/factura-imprimir.html
+++ b/src/main/resources/templates/factura-imprimir.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f6ff;
+            background: linear-gradient(120deg, #78bcff, #ffffff);
             color: #002244;
             padding: 30px;
             max-width: 800px;
