--- a/src/main/resources/templates/factura.html
+++ b/src/main/resources/templates/factura.html
@@ -37,7 +37,7 @@
     body {
       padding-top: 60px; /* espacio para la barra fija */
       font-family: 'Poppins', sans-serif;
-      background-color: #f0f4f8;
+      background: linear-gradient(120deg, #78bcff, #ffffff);
       color: #006edc;
       margin: 0;
       padding-left: 20px;
@@ -145,7 +145,10 @@
   <li><a href="/platillos" sec:authorize="hasAuthority('ROLE_ADMIN')">Platillos</a></li>
   <a th:href="@{/pedidos}">Pedido</a>
   <a th:href="@{/factura}">Factura</a>
-  <button type="submit">Cerrar Sesión</button>
+  <form th:action="@{/logout}" method="post" style="display:inline;">
+    <button type="submit" class="btn-logout">Cerrar Sesión</button>
+  </form>
+
 </nav>
 
 <h1>Listado de Facturas</h1>
