--- a/src/main/resources/templates/mesa.html
+++ b/src/main/resources/templates/mesa.html
@@ -7,7 +7,7 @@
     body {
           padding-top: 60px;
           font-family: 'Poppins', sans-serif;
-          background-color: #f0f4f8;
+          background: linear-gradient(120deg, #78bcff, #ffffff);
           color: #002244;
           margin: 0;
           padding-left: 20px;
@@ -19,7 +19,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      background-color: #006edc;
+      background-color: #white;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -163,7 +163,10 @@
   <li><a href="/platillos" sec:authorize="hasAuthority('ROLE_ADMIN')">Platillos</a></li>
   <a th:href="@{/pedidos}">Pedido</a>
   <a th:href="@{/factura}">Factura</a>
-  <button type="submit">Cerrar Sesión</button>
+  <form th:action="@{/logout}" method="post" style="display:inline;">
+    <button type="submit" class="btn-logout">Cerrar Sesión</button>
+  </form>
+
 </nav>
 
 <h1>Gestión de Mesas</h1>
