--- a/src/main/resources/templates/mesero.html
+++ b/src/main/resources/templates/mesero.html
@@ -8,7 +8,7 @@
         body {
           padding-top: 60px;
           font-family: 'Poppins', sans-serif;
-          background-color: #f0f4f8;
+          background: linear-gradient(120deg, #78bcff, #ffffff);
           color: #002244;
           margin: 0;
           padding-left: 20px;
@@ -21,7 +21,7 @@
           left: 0;
           right: 0;
           height: 50px;
-          background-color: #006edc;
+          background: linear-gradient(120deg, #78bcff, #ffffff);
           display: flex;
           align-items: center;
           justify-content: center;
@@ -144,7 +144,10 @@
     <a href="/platillos" sec:authorize="hasAuthority('ROLE_ADMIN')">Platillos</a>
     <a th:href="@{/pedidos}">Pedido</a>
     <a th:href="@{/factura}">Factura</a>
-    <button type="submit">Cerrar Sesión</button>
+    <form th:action="@{/logout}" method="post" style="display:inline;">
+        <button type="submit" class="btn-logout">Cerrar Sesión</button>
+    </form>
+
 </nav>
 
 <h1>Registro de Mesero</h1>
