--- a/src/main/resources/templates/pedido.html
+++ b/src/main/resources/templates/pedido.html
@@ -36,7 +36,7 @@
     body {
       padding-top: 80px;
       font-family: 'Poppins', sans-serif;
-      background-color: #f0f4f8;
+      background: linear-gradient(120deg, #78bcff, #ffffff);
       color: #002244;
       margin: 0;
       padding-left: 30px;
@@ -162,7 +162,10 @@
   <li><a href="/platillos" sec:authorize="hasAuthority('ROLE_ADMIN')">Platillos</a></li>
   <a th:href="@{/pedidos}">Pedido</a>
   <a th:href="@{/factura}">Factura</a>
-  <button type="submit">Cerrar Sesión</button>
+  <form th:action="@{/logout}" method="post" style="display:inline;">
+    <button type="submit" class="btn-logout">Cerrar Sesión</button>
+  </form>
+
 </nav>
 
 <div style="max-width: 1200px; margin: 0 auto; padding: 20px;">
